Продолжил работать над алгоритмом. Добавил пару утилсов. Оставил несколько todo Остановился на алгоритме расчета байтов коррекции

--- a/projects/qr_code_generator/Makefile
+++ b/projects/qr_code_generator/Makefile
@@ -1,5 +1,5 @@
 CC := gcc
-CFLAGS := -Wall -Wextra -std=c11
+CFLAGS := -Wall -Wextra -std=c11 -lm
 
 SOURCES := $(wildcard src/**/*.c) $(wildcard src/*.c)
 OBJECTS := $(SOURCES:.c=.o)
